fixed active nav class and overflow text on sidebar

--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -1,3 +1,7 @@
+.side-nav a {
+  overflow-x: scroll;
+}
+
 h5 {
   color:green;
 }
@@ -62,3 +66,4 @@ a.copy-link:hover i.link { display:block; }
   //  top:64px;
   //}
 }
+
